@@ -1,3 +1,8 @@
+2006-07-30    <jeff@mini.nerble.net>
+
+	* bggame.cc (BG_Game): Added lip-syncing enhancements contributed
+	by Eric Wasylishen.
+
 2006-07-20    <jeff@mini.nerble.net>
 
 	* actorio.cc: (Experimentally) Allow chars. >= 127 in NPC names.
